--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "twilio-connector",
   "description": "Twilio Connector Plugin project for the Reekoh IoT Platform.",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "author": "Reekoh, Inc.",
   "main": "app.js",
   "scripts": {
@@ -12,6 +12,10 @@
     "url": "https://github.com/Reekoh/twilio-connector"
   },
   "dependencies": {
+    "async": "^1.5.2",
+    "gulp-jshint": "^2.0.0",
+    "jshint": "^2.9.1",
+    "lodash.isarray": "^4.0.0",
     "lodash.isempty": "^3.0.4",
     "lodash.isplainobject": "^3.2.0",
     "twilio": "^2.5.2"
