--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "twilio-connector",
   "description": "Twilio Connector Plugin project for the Reekoh IoT Platform.",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "author": "Reekoh, Inc.",
   "main": "app.js",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp lint"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,9 @@
     "jshint": "^2.9.1",
     "lodash.isarray": "^4.0.0",
     "lodash.isempty": "^4.2.1",
+    "lodash.iserror": "^3.1.1",
     "lodash.isplainobject": "^4.0.4",
+    "reekoh": "^1.0.2",
     "twilio": "^2.5.2"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "gulp-json-lint": "^0.1.0",
     "gulp-mocha": "^2.2.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-standard": "^8.0.4",
     "mocha": "^2.4.5"
   },
   "license": "LGPL-3.0"
