--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
     "url": "https://github.com/Reekoh/twilio-connector"
   },
   "dependencies": {
-    "async": "^1.5.2",
-    "gulp-jshint": "^2.0.0",
-    "jshint": "^2.9.1",
-    "lodash.isarray": "^4.0.0",
-    "lodash.isempty": "^4.2.1",
-    "lodash.iserror": "^3.1.1",
-    "lodash.isplainobject": "^4.0.4",
-    "reekoh": "^1.0.2",
-    "twilio": "^2.5.2"
+    "async": "=1.5.2",
+    "gulp-jshint": "=2.0.0",
+    "jshint": "=2.9.1",
+    "lodash.isarray": "=4.0.0",
+    "lodash.isempty": "=4.2.1",
+    "lodash.iserror": "=3.1.1",
+    "lodash.isplainobject": "=4.0.4",
+    "reekoh": "=1.0.2",
+    "twilio": "=2.5.2"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-cli": "^1.2.1",
-    "gulp-jshint": "^2.0.0",
-    "gulp-json-lint": "^0.1.0",
-    "gulp-mocha": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-standard": "^8.0.4",
-    "mocha": "^2.4.5"
+    "gulp": "=3.9.1",
+    "gulp-cli": "=1.2.1",
+    "gulp-jshint": "=2.0.0",
+    "gulp-json-lint": "=0.1.0",
+    "gulp-mocha": "=2.2.0",
+    "gulp-plumber": "=1.1.0",
+    "gulp-standard": "=8.0.4",
+    "mocha": "=2.4.5"
   },
-  "license": "LGPL-3.0"
+  "license": "GPL 3.0"
 }
